--- a/style-index.css
+++ b/style-index.css
@@ -17,5 +17,32 @@ body {
     border: 2px solid rgb(223, 101, 223);
 }
 
-
+@media (max-width: 768px) {
+    .img-responsive{
+     width: 300px;
+    height:50px;
+    padding-left:50px;
+    }
+    }
+    @media (max-width: 376px) {
+    .img-responsive{
+     width: 220px;
+     height:50px;
+     padding-left: 20px;
+    }
+    }
+    @media (max-width: 286px) {
+    .img-responsive{
+     width: 180px;
+     height:50px;
+     padding-left: 5px;
+     }
+    .footer{
+     height: auto;
+     }
+     h4{
+     padding-top: 50px;
+     padding-left: 20px;
+     }
+     }
 
