--- a/style-index.css
+++ b/style-index.css
@@ -16,6 +16,9 @@ body {
     background-color: rgb(240, 229, 240);
     border: 2px solid rgb(223, 101, 223);
 }
+.card-body {
+    color: rgb(73, 10, 73);
+}
 
 @media (max-width: 768px) {
     .img-responsive{
@@ -37,6 +40,11 @@ body {
      height:50px;
      padding-left: 5px;
      }
+    .footer{
+     height: auto;
      }
-
-
+     h4{
+     padding-top: 50px;
+     padding-left: 20px;
+     }
+     }
