--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,5 @@
 body {
 	background-image: url("https://i.pinimg.com/564x/c3/8a/09/c38a093c28ada7dad7b48c53cf1cc336.jpg");
-	font-family: 'Nunito', sans-serif;
 }
 
 .nav {
@@ -10,8 +9,15 @@ body {
 	padding: 0;
 	top: 0;
 	width: 100%;
+	height: 60px;
 	position: fixed;
 	background: rgb(240, 229, 240);
+}
+
+#name-about {
+	color: rgba(126, 35, 126, 0.5);
+	text-align: left;
+	font-family: 'Mrs Saint Delafield', cursive;
 }
 
 ul {
@@ -19,34 +25,64 @@ ul {
 	margin: 0;
 	padding: 0;
 	background: #333;
+	text-align: center;
 }
 
 li {
 	display: inline-block;
+	text-align: center;
 }
 
 li a {
 	display: block;
-	color: rgb(73, 10, 73);
 	padding: 1.7vh 1.8vh;
 	text-decoration: none;
-	font-size: 1.2em;
+	font-family: 'Baloo Bhaina 2', cursive;
+	color: rgba(126, 35, 126, 0.5);
+	text-align: left;
+
 }
 
 li a:hover {
 	background: rgb(226, 211, 226);
 	color: rgb(73, 10, 73);
+	text-decoration: none;
+	height: 60px;
+
 }
 
 .jumbotron {
 	margin-top: 100px;
-	color: rgb(56, 110, 110);
-	background: rgb(205, 226, 226);
+	margin-bottom: 100px;
 }
-#name {
-	margin-left: 20px;
-	letter-spacing: 0.1em;
+
+p {
+	font-family: 'Baloo Bhaina 2', cursive;
+	color: rgba(126, 35, 126, 0.5);
 }
+
+#resume-link {
+	font-family: 'Baloo Bhaina 2', cursive;
+	color: rgba(126, 35, 126, 0.5);
+	float: right;
+	text-align: center;
+}
+
+ #index-img {
+	margin-top: 100px;
+	margin-bottom: 100px;
+	height: 100%;
+	width: 100%;
+}
+
+
+img {
+	height: 100%;
+	width: 100%;
+	float: left;
+	margin-right: 10px
+}
+
 .card-group {
 	padding-top: 100px;
 }
@@ -56,6 +92,7 @@ li a:hover {
 	text-align: center;
 	color: rgb(56, 110, 110);
 	background: rgb(205, 226, 226);
+	font-family: 'Baloo Bhaina 2', cursive;
 }
 
 * {
@@ -65,6 +102,7 @@ li a:hover {
 #top-of-form {
 	padding-top: 100px;
 	color: rgb(0, 24, 24);
+	font-family: 'Baloo Bhaina 2', cursive;
 }
 
 /* Style inputs */
@@ -77,6 +115,7 @@ textarea {
 	margin-top: 6px;
 	margin-bottom: 16px;
 	resize: vertical;
+	font-family: 'Baloo Bhaina 2', cursive;
 }
 
 input[type=submit] {
@@ -85,6 +124,7 @@ input[type=submit] {
 	padding: 12px 20px;
 	border: none;
 	cursor: pointer;
+	font-family: 'Baloo Bhaina 2', cursive;
 }
 
 input[type=submit]:hover {
@@ -96,9 +136,9 @@ input[type=submit]:hover {
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	font-family: 'Nunito', sans-serif;
 	background: rgb(240, 229, 240);
 	color: rgb(73, 10, 73);
 	text-align: center;
 	margin-top: 10px;
+	font-family: 'Baloo Bhaina 2', cursive;
 }
