--- a/assets/style.css
+++ b/assets/style.css
@@ -108,3 +108,7 @@ img {
 	margin-top: 10px;
 	font-family: 'Baloo Bhaina 2', cursive;
 }
+
+@media (min-width: 640px) { body {font-size:1rem;} } 
+@media (min-width:960px) { body {font-size:1.2rem;} } 
+@media (min-width:1100px) { body {font-size:1.5rem;} }
