--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,6 @@ body {
 	width: 100%;
 	height: 40vh;
 	color: rgb(73, 10, 73);
-
 }
 
 #resume-link{
@@ -84,31 +83,23 @@ img {
 	font-family: 'Baloo Bhaina 2', cursive;
 }
 
-.Contact-header-text {
+#contact-me{
 	width: 100%;
-	height: 60px;
+	height: 30vh;
 	background: rgb(240, 229, 240);
 	
 }
 
-.contact-card-group {
-	margin-top: 0;
-	width: 100%;
-	height: 40vh;
-}
 
 .footer {
 	position: fixed;
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	background: rgb(240, 229, 240);
+	background: rgb(191, 216, 216);
 	color: rgb(73, 10, 73);
 	text-align: center;
 	margin-top: 10px;
 	font-family: 'Baloo Bhaina 2', cursive;
 }
 
-@media (min-width: 640px) { body {font-size:1rem;} } 
-@media (min-width:960px) { body {font-size:1.2rem;} } 
-@media (min-width:1100px) { body {font-size:1.5rem;} }
