--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,6 @@ body {
 
 .name {
 	width: 100%;
-	height: 100px;
 	background: rgb(240, 229, 240);
 	color: rgb(73, 10, 73);
 	text-align: center;
@@ -16,7 +15,6 @@ body {
 .jumbotron {
 	margin-top: 0;
 	width: 100%;
-	height: 100vh;
 	color: rgb(73, 10, 73);
 	padding: 20px;
 }
@@ -44,9 +42,7 @@ h2 {
 .card-group {
 	margin-top: 0;
 	width: 100%;
-	height: 40vh;
 	padding: 20px;
-	height: 100vh;
 }
 
 .card {
@@ -57,8 +53,7 @@ h2 {
 }
 
 #contact-me{
-	width: 100%;
-	height: 100vh;
+	width: 100%; </div>
 	background: rgb(240, 229, 240);
 	
 }
